--- a/colombo-ios/Info.plist
+++ b/colombo-ios/Info.plist
@@ -4,13 +4,10 @@
 <dict>
 	<key>MKDirectionsApplicationSupportedModes</key>
 	<array/>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>This app needs your location to find nearby landmarks.</string>
-    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-    <string>This app needs your location to find nearby landmarks.</string>
-    <key>UIBackgroundModes</key>
-    <array>
-        <string>audio</string>
-    </array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>location</string>
+	</array>
 </dict>
 </plist>
