Update the Assets and Plist for distribution

--- a/colombo-ios/Info.plist
+++ b/colombo-ios/Info.plist
@@ -2,14 +2,20 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>UILaunchStoryboardName</key>
-	<string>Launch Screen</string>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>MKDirectionsApplicationSupportedModes</key>
 	<array/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
 		<string>location</string>
+		<string>processing</string>
+		<string>fetch</string>
+	</array>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>$(PRODUCT_BUNDLE_IDENTIFIER).location_lookup</string>
 	</array>
 </dict>
 </plist>
